--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,11 @@
 body {
     background-color: var(--color-bg-main);
     color: var(--color-font-main);
+    font-family: 'Roboto', sans-serif;
+}
+
+input {
+    font-family: 'Roboto', sans-serif;
 }
 
 a:link {
@@ -57,6 +62,7 @@ textarea, input, select {
     color: var(--color-font-main);
 }
 
+// Main button
 input[type="submit"] {
     min-width: 120px;
     background-color: var(--color-highlight-dark);
@@ -82,4 +88,31 @@ input[type="submit"]:hover {
 
 .border {
     border: 2px solid var(--color-highlight-dark);
+}
+
+// Magical input: file field hiding stuff
+.file_field_hide {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+// This is the label we add, which becomes the button
+.file_field_hide + label {
+    min-width: 120px;
+    background-color: var(--color-highlight-dark);
+    color: var(--color-font-inverse);
+    transition: 0.2s;
+
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.19);
+    display: inline-block;
 }
