--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,39 +15,118 @@
  */
 
 :root {
+    box-sizing: border-box;
     --color-font-main: #000000;
     --color-font-inverse: #EEEEEE;
     --color-bg-main: #EEEEEE;
     --color-bg-alt: #FAFAFA;
-    --color-highlight-dark: #07796B;
-    --color-highlight-light: #4AAA94;
+    --color-highlight-main: #07796B;
+    --color-highlight-secondary: #4AAA94;
     --color-highlight-alt: #C52233;
+
+    --font-main: 'Roboto', sans-serif;
+    --font-serif: 'Roboto Slab', serif;
+    --font-display: 'Pacifico', serif;
+
+    --shadow-material: 0 3px 2px rgba(0, 0, 0, 0.25), 0 0 2px rgba(0, 0, 0, 0.25);
+    --shadow-outline: 0 0 10px rgba(0, 0, 0, 0.35);
 }
 
 body {
+    margin: 0;
     background-color: var(--color-bg-main);
     color: var(--color-font-main);
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-main);
+}
+
+.container {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.nav {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+
+    height: 60px;
+    background-color: var(--color-highlight-secondary);
+    color: var(--color-font-inverse);
+    justify-content: space-between;
+    align-items: center;
+
+    .navitem {
+        padding: 0 2vw 0 2vw;
+        a {
+            &:link {
+            color: var(--color-font-inverse);
+            text-shadow: var(--shadow-material);
+            }
+            &:visited {
+                color: var(--color-font-inverse);
+            }
+            &:hover {
+                color: var(--color-highlight-alt);
+            }
+        }
+    }
+}
+
+.main {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    overflow: auto;
+
+}
+
+.content {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    max-width: 1024px;
+    flex-direction: column;
+    margin: 0px 19px;
+    align-items: center;
+
+    box-shadow: var(--shadow-outline);
 }
 
 input {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-main);
 }
 
-a:link {
-    color: var(--color-highlight-dark);
+herofont {
+    font-family: var(--font-display);
+    font-weight: normal;
+    font-size: 28px;
+    text-shadow: var(--shadow-material);
+}
+
+a {
+    &:link {
+    color: var(--color-highlight-main);
     text-decoration: none;
     transition: 0.2s;
     font-weight: bold;
+    }
+    &:visited {
+        color: var(--color-highlight-main);
+    }
+    &:hover {
+        color: var(--color-highlight-alt);
+    }
 }
 
-a:visited {
-    color: var(--color-highlight-dark);
-}
 
-a:hover {
-    color: var(--color-highlight-alt);
-}
+
+
 
 textarea, input, select {
     box-shadow: none;
@@ -60,12 +139,16 @@ textarea, input, select {
 
     background-color: var(--color-bg-alt);
     color: var(--color-font-main);
+    box-shadow: var(--shadow-material);
 }
 
 // Main button
-input[type="submit"] {
-    min-width: 120px;
-    background-color: var(--color-highlight-dark);
+.button {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    min-width: 150px;
+    background-color: var(--color-highlight-main);
     color: var(--color-font-inverse);
     transition: 0.2s;
 
@@ -75,19 +158,44 @@ input[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
     
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: var(--shadow-material);
+    display: inline-block;
+    &:hover {
+        background-color: var(--color-highlight-alt);
+    }
 }
 
-input[type="submit"]:hover {
-    background-color: var(--color-highlight-alt);
+input[type="submit"] {
+    min-width: 120px;
+    background-color: var(--color-highlight-main);
+    color: var(--color-font-inverse);
+    transition: 0.2s;
+
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    
+    box-shadow: var(--shadow-material);
+
+    &:hover {
+        background-color: var(--color-highlight-alt);
+    }
 }
+
+
 
 .round {
     border-radius: 50%;
 }
 
 .border {
-    border: 2px solid var(--color-highlight-dark);
+    border: 2px solid var(--color-highlight-main);
+}
+
+.maxmobile {
+    max-width: 300px;
 }
 
 // Magical input: file field hiding stuff
@@ -102,8 +210,11 @@ input[type="submit"]:hover {
 
 // This is the label we add, which becomes the button
 .file_field_hide + label {
-    min-width: 120px;
-    background-color: var(--color-highlight-dark);
+    display: flex;
+    text-align: center;
+    align-items: center;
+    min-width: 150px;
+    background-color: var(--color-highlight-main);
     color: var(--color-font-inverse);
     transition: 0.2s;
 
@@ -115,4 +226,8 @@ input[type="submit"]:hover {
     
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.19);
     display: inline-block;
+    &:hover {
+        background-color: var(--color-highlight-alt);
+    }
 }
+
