--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,4 @@
 <h1>Create Profile</h1>
+<h4>We just need a few details from you:</h4>
 
-<%= render 'form', profile: @profile %>
-
-<%= link_to 'Back', profile_path %>
+<%= render 'partials/profile_new_form', profile: @profile %>
