--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
     --color-highlight-main: #07796B;
     --color-highlight-secondary: #4AAA94;
     --color-highlight-alt: #C52233;
+    --color-highlight-alt-light: #f0a8af;
 
     --font-main: 'Roboto', sans-serif;
     --font-serif: 'Roboto Slab', serif;
@@ -30,7 +31,10 @@
 
     --shadow-material: 0 3px 2px rgba(0, 0, 0, 0.25), 0 0 2px rgba(0, 0, 0, 0.25);
     --shadow-outline: 0 0 10px rgba(0, 0, 0, 0.35);
+    --shadow-warning: 0 0 10px rgba(197, 34, 51, 0.8);
 }
+
+
 
 body {
     margin: 0;
@@ -41,9 +45,8 @@ body {
 
 .container {
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-
+    width: 100vw;   
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -54,7 +57,6 @@ body {
     display: flex;
     width: 100%;
     flex-direction: row;
-    flex-grow: 0;
 
     height: 60px;
     background-color: var(--color-highlight-secondary);
@@ -94,17 +96,18 @@ body {
 
 .main {
     display: flex;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     justify-content: center;
     overflow: auto;
-
+    margin: 0;
+    padding: 0;
 }
 
 .content {
     text-align: center;
 
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     max-width: 1024px;
     padding: 0px 19px;
@@ -139,7 +142,33 @@ a {
     }
 }
 
+.warning {
+    position: absolute;
+    top: 80px;
+    width: 280px;
+    left: 50%;
+    margin-left: -155px;
+    padding: 10px;
+    background-color: var(--color-highlight-alt-light);
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: var(--shadow-material);
+    box-shadow: var(--shadow-outline);
+}
 
+.notice {
+    position: absolute;
+    top: 80px;
+    width: 280px;
+    left: 50%;
+    margin-left: -155px;
+    padding: 10px;
+    background-color: var(--color-highlight-secondary);
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: var(--shadow-material);
+    box-shadow: var(--shadow-outline);
+}
 
 
 
@@ -162,7 +191,6 @@ textarea, input, select {
     display: flex;
     text-align: center;
     align-items: center;
-    min-width: 150px;
     background-color: var(--color-highlight-main);
     color: var(--color-font-inverse);
     transition: 0.2s;
@@ -177,6 +205,15 @@ textarea, input, select {
     display: inline-block;
     &:hover {
         background-color: var(--color-highlight-alt);
+    }
+    &.btn-small {
+        width: 80px;
+    }
+    &.btn-medium {
+        width: 150px;
+    }
+    &.btn-wide {
+        min-width: 100%;
     }
 }
 
