--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -12,7 +12,7 @@
             <%= link_to_unless_current 'Log In', new_user_session_path %>
         </div>
     <% elsif current_user.profile.nil? || current_user.profile.id.nil? %>
-        Profile Incomplete | <%= link_to_unless_current 'Log Out', destroy_user_session_path, method: :delete %>
+        <%= link_to_unless_current 'Log Out', destroy_user_session_path, method: :delete %>
     <% else %>   
         <div class="subitem">
             <%= link_to_unless_current 'Log Out', destroy_user_session_path, method: :delete %> 
