--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,9 +1,13 @@
 <h1>(search box here)</h1>
 
 <% if policy(@profile).update? %>
-    <a href="<%= edit_profile_path %>"><div class='button'>Edit Profile</div></a>
+        <a href="<%= edit_profile_path %>"><div class='button btn-small'>Edit Profile</div></a> 
+        <a href="<%= destroy_user_session_path %>", data-method="DELETE" ><div class='button btn-small'>Sign Out</div></a>
+        <p></p>
 <% end %>
 
 <%= image_tag @profile.avatar_display(:small), class: 'round border maxmobile' %><br/>
 
 <h1><%= @profile.full_name %></h1>
+<h4><%= @profile.tagline %></h4>
+<p><%= @profile.bio %></p>
