--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,8 +1,10 @@
 <h1>(search box here)</h1>
 
 <% if policy(@profile).update? %>
-        <a href="<%= edit_profile_path %>"><div class='button btn-small'>Edit Profile</div></a> 
-        <a href="<%= destroy_user_session_path %>", data-method="DELETE" ><div class='button btn-small'>Sign Out</div></a>
+        <div>
+            <a href="<%= edit_profile_path %>"><div class='button btn-small'>Edit Profile</div></a> 
+            <a href="<%= destroy_user_session_path %>", data-method="DELETE" ><div class='button btn-small'>Sign Out</div></a>
+        </div>
         <p></p>
 <% end %>
 
@@ -11,3 +13,11 @@
 <h1><%= @profile.full_name %></h1>
 <h4><%= @profile.tagline %></h4>
 <p><%= @profile.bio %></p>
+<div class="card half">
+<% if @profile.website %>
+    <strong>Website:</strong> <%= link_to @profile.website %><br/>
+<% end %>
+<% if @profile.email_show %>
+    <strong>Email:</strong> <%= mail_to @profile.user.email %>
+<% end %>
+</div>
