--- a/app/views/partials/_profile_edit_form.html.erb
+++ b/app/views/partials/_profile_edit_form.html.erb
@@ -35,6 +35,10 @@
   </div>
 
   <div>
+    <%= form.text_field :website, id: :profile_website, placeholder: 'your website' %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
