--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navitem">
-    <a href="<%= root_path %>"><herofont>takesavillage</herofont></a>
+    <a href="<%= root_path %>"><logofont>takesavillage</logofont></a>
 </div>
 
 <div class="navitem">
