--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,13 +1,15 @@
-<h1>(search box here)</h1>
+
+    <div class="hero-header" id="event-hero">
+        <%= image_tag @event.image_display(:large), class: 'hero-image' %><br/>
+        <div class="hero-text"><herofont><%= @event.title %></herofont></div>
+    </div>
 
 <div class="half">
-    <div class="hero-header" id="event-hero">
-        <%= image_tag @event.image_display(:medium), class: 'maxmobile' %><br/>
-    </div>
+    <h1>(search box here)</h1>
 
     <% if policy(@event).update? %>
         <div>
-            <a href="<%= edit_event_path %>"><div class='button btn-small'>Edit Event</div></a> 
+            <a href="<%= edit_event_path %>"><div class='button btn-medium'>Edit Event</div></a> 
         </div>
         <p></p>
     <% end %>
@@ -15,16 +17,18 @@
     <h1>
         <%= @event.title %>
     </h1>
+
     <div class="section" id="event-details">
         <div class="card eventdetails">
-            <strong>Price:</strong> <%= @event.start_date %><br/>
-            <strong>When:</strong> <%= @event.event_time %><br/>
-            <strong>Price:</strong> <%= dollars(@event.price) %><br/>
+            <strong>Price:</strong> <%= @event.price > 0 ? dollars(@event.price) : "Free!" %><br/>
+            <strong>When:</strong> <%= @event.start_date %>, <%= @event.event_time %><br/>
+            <strong>Where:</strong> <%= @event.street %><br/>
+                                    <%= @event.suburb %> <%= @event.state %><br/>
             <strong>Taught by:</strong> <%= link_to @event.owner.profile.full_name, profile_path(@event.owner.profile) %><br/>
         </div>
-        <a href="#"><div class='button btn-small'>Book My Spot!</a></div>
+        <a href="#"><div class='button btn-medium'>Book My Spot!</a></div>
     </div>
-
+ 
     <div class="section" id="event-description">
         <h1>
             What's it all about?
