--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@
 
     --shadow-material: 0 4px 4px rgba(0, 0, 0, 0.25), 0 0 2px rgba(0, 0, 0, 0.25);
     --shadow-outline: 0 0 10px rgba(0, 0, 0, 0.35);
-    --shadow-warning: 0 0 10px rgba(197, 34, 51, 0.8);
+    --shadow-warning: 0 0 10px rgba(241, 18, 40, 0.8);
 }
 
 * {
@@ -256,7 +256,11 @@ form {
 }
 
 .errors {
-    color: var(--color-highlight-main);
+    color: var(--color-highlight-alt);
+}
+
+.field_with_errors { 
+    box-shadow: var(--shadow-warning);
 }
 
 .warning {
