--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -153,14 +153,17 @@ herofont {
         width: 100vw;
     
         position: relative;
-        top: -100%;
+        top: 0;
         z-index: 0;
+        min-height: 300px;
     }
     
     .hero-text {
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+
 
         float: left;
         position: absolute;
@@ -335,6 +338,9 @@ textarea, input, select {
     &.btn-medium {
         width: 150px;
     }
+    &.btn-large {
+        width: 400px;
+    }
     &.btn-wide {
         min-width: 100%;
     }
@@ -378,6 +384,15 @@ input[type="submit"] {
 
 .maxmobile {
     max-width: 250px;
+}
+
+.centered {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .inputfield {
