--- a/app/views/partials/_event_new_form.html.erb
+++ b/app/views/partials/_event_new_form.html.erb
@@ -58,6 +58,10 @@
       <%= form.text_field :country_code, id: :event_country_code, placeholder: 'eg. AU', required: true %>
     </div>
 
+    <div>
+      <%= form.submit %>
+    </div>
+
     <h2>Any more information?</h1>
 
     <div class="centered">
