--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,8 +8,17 @@
     
 </div>
 
-<div class="half">
-    <h1>(search box here)</h1>
+<h1>(search box here)</h1>
 
+<div class="event-container">
+
+    <% if @events.present? %>
+        <% @events.each do |event| %>
+            <%= render 'partials/eventcard', event: event %>
+        <% end %>
+    <% end %>
+    
 </div>
+
+
 
