--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
             <div class="notice"><%= flash[:notice] %></div>
           <% end %>
           <%= yield %>
+          <div class="coverleft"></div>
+          <div class="coverright"></div>
         </div>
       </div>
     </div>
