--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,6 +24,7 @@
         <div class="card eventdetails">
             <strong>Price:</strong> <%= @event.price > 0 ? dollars(@event.price) : "Free!" %><br/>
             <strong>When:</strong> <%= @event.start_date %>, <%= @event.event_time %><br/>
+            <strong>Duration:</strong> <%= distance_of_time_in_words(@event.duration).gsub('about ','')  %><br/>
             <strong>Where:</strong> <%= @event.street %><br/>
                                     <%= @event.suburb %> <%= @event.state %><br/>
             <strong>Taught by:</strong> <%= link_to @event.owner.profile.full_name, profile_path(@event.owner.profile) %><br/>
