Update event index- Move to partial

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,24 +1,1 @@
-
-<div class="hero-header" id="event-hero">
-    <%= image_tag "hero/#{rand(4)}.jpg", class: 'hero-image' %><br/>
-    <div class="hero-text">
-        <herofont>You know so many things!</herofont>
-        <a href="<%= new_event_path %>"><div class='button btn-large'><herofont>Can you teach me?</herofont></div></a>
-    </div>
-    
-</div>
-
-<h1>(search box here)</h1>
-
-<div class="event-container">
-
-    <% if @events.present? %>
-        <% @events.each do |event| %>
-            <%= render 'partials/eventcard', event: event %>
-        <% end %>
-    <% end %>
-    
-</div>
-
-
-
+<%= render 'partials/event_index', events: @events %>
