Create static pages

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,15 +1,10 @@
-<h1>Index!</h1>
-
-<div>
-    <%= link_to_unless_current 'Register', new_user_registration_path %> | <%= link_to_unless_current 'Log In', new_user_session_path %> | <%= link_to_unless_current 'Log Out', destroy_user_session_path, method: :delete %><br/>
+<div class="hero-header" id="event-hero">
+    <%= image_tag "hero/#{rand(4)}.jpg", class: 'hero-image' %><br/>
+    <div class="hero-text">
+        <herofont>You know so many things!</herofont>
+        <a href="<%= new_event_path %>"><div class='button btn-large'><herofont>Can you teach me?</herofont></div></a>
+    </div>
+    
 </div>
 
-<% if user_signed_in? %>
-    <% unless current_user.profile.nil? %>
-        Current Profile: <%= current_user.profile.id %>
-    <% else %>
-        No current profile associated with user
-    <% end %>
-<% else %>
-    User not signed in
-<% end %>
+<%= render 'partials/event_index', events: @events %>
